# Alteryx-LLM-Connect

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ayx_workspace.json  main.py  main.pyz  package-lock.json  pyproject.toml
backend/: __init__.py  requirements-thirdparty.txt
backend/ayx_plugins/: __init__.py  hugging_dataset.py  l_l_m_connect.py  l_l_m_connect_advanced.py  testing.py
backend/ayx_plugins.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/tests/: test_l_l_m_connect.py
configuration/: Config.xml
configuration/HuggingDataset_1_0/: HuggingDataset_1_0Config.xml  manifest.json
configuration/LLMConnect_1_0/: LLMConnect_1_0Config.xml  manifest.json
ui/LLMConnect/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  webpack.dev.js  webpack.prod.js
ui/LLMConnect/harness/Adapter/: index.tsx
ui/LLMConnect/src/: config.tsx  config.yaml  index.tsx
